--- a/hr_recruitment_no_header_footer/views/templates.xml
+++ b/hr_recruitment_no_header_footer/views/templates.xml
@@ -1,30 +1,46 @@
 <odoo>
-    <template id="website_hr_recruitment_custom" inherit_id="website_hr_recruitment.index">
-    </template>
-
-    <template id="web.layout.custom">&lt;!DOCTYPE html&gt;
-        <html t-att="html_data or {}">
-            <head>
-                <meta charset="utf-8"/>
-                <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-                <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-
-                <title t-esc="title or 'Odoo'"/>
-                <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/src/img/favicon.ico'"/>
-
-                <script id="web.layout.odooscript" type="text/javascript">
-                    var odoo = {
-                        csrf_token: "<t t-esc="request.csrf_token(None)"/>",
-                        debug: "<t t-esc="debug"/>",
-                    };
-                </script>
-
-                <t t-raw="head or ''"/>
-            </head>
-            <body t-att-class="body_classname">
-                <t t-raw="0"/>
-            </body>
-        </html>
-    </template>
+<?xml version="1.0"?>
+<data name="Frontend Layout" inherit_id="web.layout" primary="True">
+        <xpath expr="//head/link[last()]" position="after">
+            <t t-call-assets="web.assets_common" t-js="false"/>
+            <t t-call-assets="web.assets_frontend" t-js="false"/>
+        </xpath>
+        <xpath expr="//head/script[@id='web.layout.odooscript'] | //head/script[last()]" position="after">
+            <script type="text/javascript">
+                odoo.session_info = <t t-raw="json.dumps(request.env['ir.http'].get_frontend_session_info())"/>;
+            </script>
+            <t t-call-assets="web.assets_common_minimal_js" t-css="false" defer_load="True"/>
+            <t t-call-assets="web.assets_frontend_minimal_js" t-css="false" defer_load="True"/>
+            <t t-call="web.conditional_assets_tests"/>
+            <t t-call-assets="web.assets_common_lazy" t-css="false" lazy_load="True"/>
+            <t t-call-assets="web.assets_frontend_lazy" t-css="false" lazy_load="True"/>
+        </xpath>
+        <xpath expr="//t[@t-raw='0']" position="replace">
+            <div id="wrapwrap" t-attf-class="#{pageName or ''}">
+                <header t-if="not no_header" id="top" data-anchor="true">
+                    <img class="img-responsive d-block mx-auto" t-attf-src="/web/binary/company_logo" alt="Logo"/>
+                </header>
+                <main>
+                    <t t-raw="0"/>
+                </main>
+                <!--<footer t-if="not no_footer" id="bottom" data-anchor="true" class="bg-light o_footer">
+                    <div id="footer"/>
+                    <div class="o_footer_copyright">
+                        <div class="container py-3">
+                            <div class="row">
+                                <div class="col-sm text-center text-sm-left text-muted">
+                                    <t t-call="web.debug_icon"/>
+                                    <span>Copyright &amp;copy;</span> <span t-field="res_company.name" itemprop="name">Company name</span>
+                                </div>
+                                <div class="col-sm text-center text-sm-right">
+                                    <t t-call="web.brand_promotion"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </footer>-->
+            </div>
+        </xpath>
+    <xpath expr="." position="attributes"><attribute name="t-name">web.frontend_layout_custom</attribute></xpath></data>
 
 </odoo>
