--- a/hr_recruitment_no_header_footer/views/templates.xml
+++ b/hr_recruitment_no_header_footer/views/templates.xml
@@ -22,7 +22,7 @@
                 <main>
                     <t t-raw="0"/>
                 </main>
-                <!--<footer t-if="not no_footer" id="bottom" data-anchor="true" class="bg-light o_footer">
+                <footer t-if="not no_footer" id="bottom" data-anchor="true" class="bg-light o_footer">
                     <div id="footer"/>
                     <div class="o_footer_copyright">
                         <div class="container py-3">
@@ -37,7 +37,9 @@
                             </div>
                         </div>
                     </div>
-                </footer>-->
+                </footer>
             </div>
         </xpath>
-    <xpath expr="." position="attributes"><attribute name="t-name">web.frontend_layout_custom</attribute></xpath></data>
+    <xpath expr="." position="attributes"><attribute name="t-name">web.frontend_layout_custom</attribute>
+    </xpath>
+    </data>
