add module hr 2054

--- a/hr_recruitment_no_header_footer/views/templates.xml
+++ b/hr_recruitment_no_header_footer/views/templates.xml
@@ -1,5 +1,5 @@
 <odoo>
-<template id="web.frontend_layout_custom" inherit_id="web.layout">
+<template id="frontend_layout_custom" inherit_id="web.layout">
       <xpath expr="//head/link[last()]" position="after">
             <t t-call-assets="web.assets_common" t-js="false"/>
             <t t-call-assets="web.assets_frontend" t-js="false"/>
