--- a/checks/Report/report_check_top.xml
+++ b/checks/Report/report_check_top.xml
@@ -1,7 +1,21 @@
 <odoo>
 <template id="template_id" inherit_id="l10n_us_check_printing.ckus_check">
     <div class="ckus_check" position="replace">
-        xxxxxxxxx
+        <div class="row">
+          <div class="col-12">
+            <span t-field="o.journal.name"/> 
+          </div>
+        </div>
+         <div class="row">
+          <div class="col-12">
+            <span t-field="o.journal.name"/> 
+          </div>
+        </div>
+         <div class="row">
+          <div class="col-12">
+            <span t-field="o.journal.name"/> 
+          </div>
+        </div>
     </div>
 </template>
 </odoo>
