--- a/checks/Report/report_check_top.xml
+++ b/checks/Report/report_check_top.xml
@@ -1,6 +1,7 @@
 <odoo>
 <template id="template_id" inherit_id="l10n_us_check_printing.ckus_check">
     <div class="ckus_check" position="replace">
+    <div class="ckus_check">
         <div class="row">
           <div class="col-12">
             <span t-field="o.journal.name"/> 
@@ -16,6 +17,7 @@
             <span t-field="o.journal.name"/> 
           </div>
         </div>
+    </div>
     </div>
 </template>
 </odoo>
