--- a/checks/Report/report_check_top.xml
+++ b/checks/Report/report_check_top.xml
@@ -1,23 +1,85 @@
 <odoo>
 <template id="template_id" inherit_id="l10n_us_check_printing.ckus_check">
     <div class="ckus_check" position="replace">
-    <div class="ckus_check">
+     <div style="margin-left:10%;">
+        <div class="row mt-5">
+        </div>
+        <div class="row mt-5">
+        </div>
+       <div class="row mt-5">
+              <div class="col-4">
+                 <div class="ckus_payee_addr" t-esc="o.company_id.partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}"/>
+              </div>
+              <div class="col-4">
+                 <span t-esc="o.journal_id.bank_id.name"/>
+                 <br/>
+                 <t t-if="o.journal_id.bank_id.street">
+                      <span t-esc="o.journal_id.bank_id.street"/>,
+                 </t>
+                 <t t-if="o.journal_id.bank_id.city">
+                      <span t-esc="o.journal_id.bank_id.city"/>,
+                 </t>
+                 <t t-if="o.journal_id.bank_id.state">
+                      <span t-esc="o.journal_id.bank_id.state.name"/>,
+                 </t>
+                  <t t-if="o.journal_id.bank_id.country">
+                      <span t-esc="o.journal_id.bank_id.country.name"/>
+                      <br/>
+                 </t>
+              </div>
+              <div class="col-4">
+                <span t-esc="o.check_number"/>
+              </div>
+              
+        </div>
+        <div class="row mt-1">
+              <div class="col-4">
+                  <div class="row">
+                      <div class="col-3">
+                          <strong>PAY </strong>
+                      </div>
+                      <div class="col-8">
+                         <span t-esc="page['amount_in_word'].replace('*','')"/>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-4">
+                 <strong>DATE</strong>
+                 <br/>
+                 <span t-esc="page['payment_date']"/>
+              </div>
+               <div class="col-4">
+                 <strong>AMOUNT</strong>
+                 <br/>
+                 <span t-esc="page['amount']"/>
+              </div>
+        </div>
         <div class="row">
-          <div class="col-12">
-            <span t-field="o.journal_id.name"/> 
-          </div>
-        </div>
-         <div class="row">
-          <div class="col-12">
-            <span t-field="o.journal_id.name"/> 
-          </div>
-        </div>
-         <div class="row">
-          <div class="col-12">
-            <span t-field="o.journal_id.name"/> 
-          </div>
+              <div class="col-6">
+                  <div class="row">
+                      <div class="col-3 mt-3">
+                          <strong>TO THE ORDER OF</strong>
+                      </div>
+                      <div class="col-9 mt-3">
+                          <div class="ckus_payee_addr" t-esc="page['partner_id']" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}"/>
+                      </div>
+                  </div>
+                 
+              </div>
+              <div class="col-6 mt-5">
+                  <div class="form-group">
+                      <span>_______________________________</span>
+                      <br/>
+                      <span>AUTHORIZED SIGNATURE</span>
+                    </div>
+              </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12">
+           <center><span t-esc="o.check_number + str(o.journal_id.bank_account_id.aba_routing) + str(o.journal_id.bank_account_id.acc_number)"/></center>
+        </div>
     </div>
+   </div>
 </template>
 </odoo>
