--- a/checks/Report/report_check_top.xml
+++ b/checks/Report/report_check_top.xml
@@ -68,7 +68,7 @@
               </div>
               <div class="col-6 mt-5">
                   <div class="form-group">
-                      <input style="border-bottom: 1px solid black;width:200px;"/>
+                      <div style="border-bottom: 1px solid black;width:200px;"/>
                       <br/>
                       <span>AUTHORIZED SIGNATURE</span>
                     </div>
