--- a/checks/views/views.xml
+++ b/checks/views/views.xml
@@ -1,60 +1,20 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="my_module.list">
-      <field name="name">my_module list</field>
-      <field name="model">my_module.my_module</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
-    -->
+  <record id="format_checks.account_journal_inherit" model="ir.ui.view">
+  <field name="name">format.checks.account.journal.form</field>
+  <field name="model">account.journal</field>
+  <field name="inherit_id" ref="account.view_account_journal_form"/>
+  <field name="arch" type="xml">
+     <page name="advanced_settings" position="after">
+         <page name="checks_information" string="Check Information">
+            <group>
+               <field name="company_name" />
+               <field name="company_address" />
+               <field name="bank_name" />
+               <field name="bank_address" />
+            </group>
+         </page>
+     </page>
+  </field>
+</record>
 
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="my_module.action_window">
-      <field name="name">my_module window</field>
-      <field name="res_model">my_module.my_module</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="my_module.action_server">
-      <field name="name">my_module server</field>
-      <field name="model_id" ref="model_my_module_my_module"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
-
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="my_module" id="my_module.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="my_module.menu_1" parent="my_module.menu_root"/>
-    <menuitem name="Menu 2" id="my_module.menu_2" parent="my_module.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="my_module.menu_1_list" parent="my_module.menu_1"
-              action="my_module.action_window"/>
-    <menuitem name="Server to list" id="my_module" parent="my_module.menu_2"
-              action="my_module.action_server"/>
-    -->
-  </data>
 </odoo>
