--- a/format_checks/Report/report_check_top.xml
+++ b/format_checks/Report/report_check_top.xml
@@ -8,24 +8,14 @@
         </div>
        <div class="row mt-5">
               <div class="col-4">
-                 <div class="ckus_payee_addr" t-esc="o.company_id.partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}"/>
+                  <span t-esc="o.journal_id.company_name"/>
+                  <br/>
+                  <span t-esc="o.journal_id.bank_id.company_address"/>
               </div>
               <div class="col-4">
-                 <span t-esc="o.journal_id.bank_id.name"/>
-                 <br/>
-                 <t t-if="o.journal_id.bank_id.street">
-                      <span t-esc="o.journal_id.bank_id.street"/>,
-                 </t>
-                 <t t-if="o.journal_id.bank_id.city">
-                      <span t-esc="o.journal_id.bank_id.city"/>,
-                 </t>
-                 <t t-if="o.journal_id.bank_id.state">
-                      <span t-esc="o.journal_id.bank_id.state.name"/>,
-                 </t>
-                  <t t-if="o.journal_id.bank_id.country">
-                      <span t-esc="o.journal_id.bank_id.country.name"/>
-                      <br/>
-                 </t>
+                  <span t-esc="o.journal_id.bank_name"/>
+                  <br/>
+                  <span t-esc="o.journal_id.bank_id.bank_address"/>
               </div>
               <div class="col-4">
                 <span t-esc="o.check_number"/>
