--- a/format_checks/views/report_check_top.xml
+++ b/format_checks/views/report_check_top.xml
@@ -76,7 +76,7 @@
         </div>
         <div class="row">
             <div class="col-12 mt-2">
-            <center><p t-esc="'C'+o.check_number+'C '+'A'+str(o.journal_id.bank_routing_number)+'A '+str(o.journal_id.account_number)+'C"/></center>
+            <center><p t-esc="'C'+o.check_number+'C '+'A'+str(o.journal_id.bank_routing_number)+'A '+str(o.journal_id.account_number)+'C'"/></center>
             </div>
         </div>
 </template>
