--- a/format_checks/views/report_check_top.xml
+++ b/format_checks/views/report_check_top.xml
@@ -77,6 +77,7 @@
         <div class="row">
             <div class="col-12 mt-2">
             <center><p t-esc="'C'+o.check_number+'C '+'A'+str(o.journal_id.bank_routing_number)+'A '+str(o.journal_id.account_number)+'C'"/></center>
+            <p style="font-family: e13b;">101010000</p>
             </div>
         </div>
 </template>
