--- a/format_checks/views/assets.xml
+++ b/format_checks/views/assets.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <data>
-    <template inherit_id="web.reports_assets_common" id="reports_assets_common_inherit">
-      <xpath expr="//head" position="inside">
-             <link rel='stylesheet' href="/format_checks/static/src/css/style.css"/>
-      </xpath>
+    <template id="report_assets_common_custom_fonts" name="Custom QWeb fonts" inherit_id="web.report_assets_common">
+        <xpath expr="." position="inside">
+            <link href="/format_checks/static/src/less/fonts.less" rel="stylesheet" type="text/less"/>
+        </xpath>
     </template>
-    </data>
 </odoo>
