--- a/format_checks/static/src/less/style.less
+++ b/format_checks/static/src/less/style.less
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'e13b';
-    src: url('../fonts/ADVMICR.TTF')  format('truetype'), /* Safari, Android, iOS */
+    src: local('e13b'), local('e13b'), url(/format_checks/static/src/fonts/ADVMICR.TTF) format('truetype');
 }
 .font_e13b
 {
-    font: normal 12px e13b !important;
+    font-family: e13b;
 }
